# bitcoin

play/: CMakeLists.txt  CMakeLists.txt.1
src/: base58.h  miningserver.cpp  play.cpp  skr.cpp  skr.h
